<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home"
        android:icon="@drawable/ic_home_black_24"
        android:title="@string/home" />

    <item
        android:id="@+id/search"
        android:icon="@drawable/ic_search_black_24"
        android:title="@string/searchBottomNavigation"/>

    <item
        android:id="@+id/post"
        android:icon="@drawable/ic_plus_black_24"
        android:title="@string/plusBottomNavigation" />

    <item
        android:id="@+id/notifications"
        android:icon="@drawable/ic_notification_black_24"
        android:title="@string/profileBottomNavigation" />

    <item
        android:id="@+id/profile"
        android:icon="@drawable/ic_account_circle_black_24"
        android:title="@string/title_dashboard" />

</menu>